tests/baselines/reference/contextualClassMethodParameter9.errors.txt
tests/cases/conformance/classes/contextualClassMethodParameter/contextualClassMethodParameter9.ts(6,15): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== tests/cases/conformance/classes/contextualClassMethodParameter/contextualClassMethodParameter9.ts (1 errors) ====
    class Base {
        method(x: number) { }
    }
    
    class Derived extends Base {
        method<T>(x) { }
                  ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    }
    